--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "material-icons-react": "^1.0.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-table": "^7.0.0",
-    "react-table-6": "^6.11.0"
+    "react-table-6": "^6.11.0",
+    "react-to-print": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
