--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "material-design-icons": "^3.0.1",
     "material-icons-react": "^1.0.4",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-credit-cards": "^0.8.0",
     "react-dom": "^16.13.0",
     "react-html-table-to-excel": "^2.0.0",
     "react-router": "^5.1.2",
